# dude

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE-MIT  PKGBUILD  README.md
.github/workflows/: ci.yml
hooks/: dude.hook
src/: config.rs  main.rs
src/core/: alpm.rs  mod.rs  model.rs
src/exec/: tx.rs
src/ui/: list.rs  mod.rs  tui.rs
