[package]
name = "dude"
version = "0.1.2"
edition = "2021"
authors = ["marawny"]
description = "Safe orphan package cleanup for Arch Linux with preview mode and a terminal UI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/marawny/dude"
keywords = ["pacman", "arch-linux", "orphans", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
chrono = "0.4"
regex = "1.0"
dirs = "5.0"
nix = { version = "0.28", default-features = false, features = ["user"] }
notify-rust = { version = "4.0", optional = true }

[features]
default = []
notifications = ["notify-rust"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
